<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:elevation="20dp"
    android:padding="20dp"
    android:background="@drawable/background_alert_update"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/multicast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:background="@drawable/radio_button_selectable"
                android:id="@+id/multicastMediaPlayer"
                android:textSize="16sp"
                android:text="@string/sds_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:background="@drawable/radio_button_selectable"
                android:id="@+id/multicastExoPlayer"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:text="@string/exoplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/unicast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:background="@drawable/radio_button_selectable"
                android:id="@+id/unicastMediaPlayer"
                android:textSize="16sp"
                android:text="@string/sds_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:background="@drawable/radio_button_selectable"
                android:id="@+id/unicastExoPlayer"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:text="@string/exoplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

    <CheckBox
        android:layout_marginTop="20dp"
        android:id="@+id/hwAvSync"
        android:text="@string/hw_a_v_sync"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSaveSettings"
        android:text="@string/save_settings"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>