<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_dialogs_player"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="More Settings"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_dialogs_player"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/bootup"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonHomeScreen"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/live_tv_screen"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButtonLiveTvScreen"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="Full Screen"
                        android:textColor="@color/white" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/channel_change"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonBlackFrame"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/black_frame"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButtonLastFrame"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/last_frame"
                        android:textColor="@color/white" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mode_change_in_full_screen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonCategoryView"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/category_view" />

                    <RadioButton
                        android:id="@+id/radioButtonUpDown"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/button_up_down" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="start|center"
                    android:text="@string/first_play"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonLastChannel"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/last_channel_viewed"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButtonFirstChannel"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/landing_channel"
                        android:textColor="@color/white" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/theme"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonLeanback"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/leanback" />

                    <RadioButton
                        android:id="@+id/radioButtonOriginal"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/original" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/language"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonEnglish"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/english" />

                    <RadioButton
                        android:id="@+id/radioButtonArabic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="@string/arabic" />

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Aspect Ratio"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonAspect1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radio_button_selectable"
                        android:text="1" />

                    <RadioButton
                        android:id="@+id/radioButtonAspect2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="2" />

                    <RadioButton
                        android:id="@+id/radioButtonAspect3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="3" />

                    <RadioButton
                        android:id="@+id/radioButtonAspect4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="4" />

                    <RadioButton
                        android:id="@+id/radioButtonAspect5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_button_selectable"
                        android:text="5" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btnSaveMoreSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/save"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>